--- a/Pages/DogsPage.xaml
+++ b/Pages/DogsPage.xaml
@@ -3,7 +3,8 @@
              xmlns:listview="clr-namespace:Syncfusion.Maui.ListView;assembly=Syncfusion.Maui.ListView"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="MauiApp1.DogsPage"
-             xmlns:local="clr-namespace:MauiApp1">
+             xmlns:local="clr-namespace:MauiApp1" 
+             BackgroundColor="{StaticResource Primary}">
     <ContentPage.BindingContext>
         <local:ViewTrainer/>
     </ContentPage.BindingContext>
@@ -21,11 +22,11 @@
         </Grid.RowDefinitions>
 
         <HorizontalStackLayout Spacing="5" Margin="15" Grid.Row="0">
-            <SearchBar Placeholder="Search..." WidthRequest="250" HeightRequest="50" />
+            <SearchBar Placeholder="Search..." WidthRequest="250" HeightRequest="50" BackgroundColor="Transparent" CancelButtonColor="White" PlaceholderColor="White" TextColor="White"/>
             <ImageButton HeightRequest="40"
                             WidthRequest="40"
                             Source="refresh.png"
-                            BackgroundColor="Blue"
+                            BackgroundColor="{StaticResource Secondary}"
                             CornerRadius="10"
                             Padding="5"
                             Scale="1.00"
@@ -34,13 +35,13 @@
             <ImageButton HeightRequest="40"
                             WidthRequest="40"
                             Source="descend.PNG"
-                            BackgroundColor="Blue"
+                            BackgroundColor="{StaticResource Tertiary}"
                             CornerRadius="10"
                             Padding="5"
                             Scale="1.00"/>
 
         </HorizontalStackLayout>
-        <Label Text="Recent: " Grid.Row="1" FontAttributes="Bold" Margin="4" FontFamily="OpenSans-SemiBold.ttf"/>
+        <Label Text="Recent: " Grid.Row="1" FontAttributes="Bold" Margin="4" FontSize="Medium" TextColor="White"/>
         <Frame Margin="5" Grid.Row="2" Padding="0" HeightRequest="200" BackgroundColor="Gray" BindingContext="{Binding LastDog}">
             <Frame.GestureRecognizers>
                 <TapGestureRecognizer Tapped="TapGestureRecognizer_Tapped"/>
@@ -48,14 +49,14 @@
             <VerticalStackLayout >
                 <Image Source="{Binding Picture}" Aspect="AspectFill" HeightRequest="160"/>
                 <HorizontalStackLayout Spacing="2">
-                    <Label Text="{Binding Name}" TextColor="White"  FontSize="Large" FontAttributes="Bold" Margin="4" FontFamily="OpenSans-SemiBold.ttf"/>
-                    <Label Text="|" TextColor="White" FontSize="Large" VerticalTextAlignment="Center" FontFamily="OpenSans-SemiBold.ttf"/>
-                    <Label Text="{Binding Owner}" TextColor="White"  VerticalTextAlignment="Center" FontSize="Medium" FontFamily="OpenSans-SemiBold.ttf"/>
+                    <Label Text="{Binding Name}" TextColor="{StaticResource Secondary}"  FontSize="Large" FontAttributes="Bold" Margin="4" />
+                    <Label Text="|" TextColor="{StaticResource Primary}" FontSize="Large" VerticalTextAlignment="Center" />
+                    <Label Text="{Binding Owner}" TextColor="{StaticResource Tertiary}"  VerticalTextAlignment="Center" FontSize="Medium" />
                 </HorizontalStackLayout>
 
             </VerticalStackLayout>
         </Frame>
-        <Label Text="All Dogs: " Grid.Row="3" FontAttributes="Bold" Margin="4" FontFamily="OpenSans-SemiBold.ttf"/>
+        <Label Text="All Dogs: " Grid.Row="3" FontAttributes="Bold" Margin="4" FontSize="Medium" TextColor="White"/>
         <Frame Margin="5" Grid.Row="4" BackgroundColor="Gray" HeightRequest="400" Padding="5">
             <listview:SfListView x:Name="listView"  ItemsSource="{Binding Dogs}" ItemSize="140" SelectionMode="None" SelectionGesture="Tap" TapCommandParameter="TapGestureRecognizer_Tapped" SelectionBackground="Red" >
                 <listview:SfListView.ItemsLayout>
@@ -78,7 +79,7 @@
                                 </Grid.ColumnDefinitions>
                                 <Image  Aspect="AspectFill" Grid.RowSpan="3" Grid.ColumnSpan="2" Source="{Binding Picture}" />
 
-                                <Label Text="{Binding Name}" Padding="0" Margin="4" FontAttributes="Bold" TextColor="Blue" FontSize="21" Grid.ColumnSpan="2" Grid.Row="0" FontFamily="OpenSans-SemiBold.ttf"/>
+                                <Label Text="{Binding Name}" Padding="0" Margin="4" FontAttributes="Bold" TextColor="{StaticResource Secondary}" FontSize="21" Grid.ColumnSpan="2" Grid.Row="0" />
                                 <Label Text="{Binding Owner}" Padding="2" TextColor="White" Grid.Row="2" Grid.Column="0" FontSize="15" HorizontalOptions="Center"/>
                             </Grid>
                         </Frame>
