--- a/Pages/HomePage.xaml
+++ b/Pages/HomePage.xaml
@@ -2,28 +2,28 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="MauiApp1.HomePage"
-             xmlns:local="clr-namespace:MauiApp1">
+             xmlns:local="clr-namespace:MauiApp1" BackgroundColor="{StaticResource Primary}">
 
     <ContentPage.BindingContext>
         <local:ViewTrainer/>
     </ContentPage.BindingContext>
     <VerticalStackLayout Padding="5">
         
-        <Frame Padding="5" Margin="5" BorderColor="White" >
-            <Label Text="Welcome, Anthony" HorizontalOptions="Start" FontSize="Large" />
+        <Frame Padding="5" Margin="5" BorderColor="Transparent" BackgroundColor="Transparent" >
+            <Label Text="Welcome, Anthony" HorizontalOptions="Start" FontSize="Large"  FontAttributes="Italic" TextColor="White"/>
         </Frame>
 
         <CarouselView ItemsSource="{Binding Dogs}" IndicatorView="indicatorView">
             <CarouselView.ItemTemplate>
                 <DataTemplate>
                     <VerticalStackLayout>
-                        <Label Text="{Binding Name}" FontSize="Large" FontAttributes="Bold" Padding="5" FontFamily="OpenSans-SemiBold.ttf"/>
+                        <Label Text="{Binding Name}" FontSize="Large" FontAttributes="Bold" Padding="5"  TextColor="White"/>
                         <Frame Margin="5"  Padding="0" HeightRequest="200" BackgroundColor="Gray">
                             <Frame.GestureRecognizers>
                                 <TapGestureRecognizer Tapped="TapGestureRecognizer_Tapped"/>
                             </Frame.GestureRecognizers>
                             <!-- Add Carosel View so That if an owner has multiple dogs-->
-                            <Image Source="{Binding Picture}" Aspect="AspectFill" />
+                            <Image Source="{Binding Picture}" Aspect="Center" />
                         </Frame>
                     </VerticalStackLayout>
                 </DataTemplate>
@@ -31,14 +31,14 @@
         </CarouselView>
         <IndicatorView x:Name="indicatorView"
                    IndicatorColor="LightGray"
-                   SelectedIndicatorColor="Black"
+                   SelectedIndicatorColor="{StaticResource Primary}"
                    HorizontalOptions="Center" />
         
        
 
-        <Frame Margin="5" BackgroundColor="White">
+        <Frame Margin="5" BackgroundColor="{StaticResource Gray200}">
             <VerticalStackLayout>
-                <Label Text="Trainings:" FontSize="Large" FontAttributes="Bold"  FontFamily="OpenSans-SemiBold.ttf"/>
+                <Label Text="Trainings:" FontSize="Large" FontAttributes="Bold"  />
                 <Grid Padding="10">
                     <Grid.RowDefinitions>
                         <RowDefinition Height="*"/>
@@ -51,18 +51,18 @@
                         <ColumnDefinition Width=".3*"/>
                         <ColumnDefinition Width=".2*"/>
                     </Grid.ColumnDefinitions>
-                    <Label Text="General" Grid.Row="0" Grid.Column="0" FontSize="Medium" FontFamily="OpenSans-SemiBold.ttf"/>
-                    <Label Text="Tues, 10/2 at" Grid.Row="0" Grid.Column="1" FontSize="Medium" FontFamily="OpenSans-SemiBold.ttf"/>
-                    <Label Text="4:30pm" Grid.Row="0" Grid.Column="2" FontSize="Medium" FontFamily="OpenSans-SemiBold.ttf"/>
+                    <Label Text="General" Grid.Row="0" Grid.Column="0" FontSize="Medium" />
+                    <Label Text="Tues, 10/2 at" Grid.Row="0" Grid.Column="1" FontSize="Medium" />
+                    <Label Text="4:30pm" Grid.Row="0" Grid.Column="2" FontSize="Medium" />
 
-                    <Label Text="Obediance" Grid.Row="1" Grid.Column="0" FontSize="Medium" FontFamily="OpenSans-SemiBold.ttf"/>
-                    <Label Text="Mon, 10/5 at" Grid.Row="1" Grid.Column="1" FontSize="Medium" FontFamily="OpenSans-SemiBold.ttf"/>
-                    <Label Text="11:15am" Grid.Row="1" Grid.Column="2" FontSize="Medium" FontFamily="OpenSans-SemiBold.ttf"/>
+                    <Label Text="Obediance" Grid.Row="1" Grid.Column="0" FontSize="Medium" />
+                    <Label Text="Mon, 10/5 at" Grid.Row="1" Grid.Column="1" FontSize="Medium" />
+                    <Label Text="11:15" Grid.Row="1" Grid.Column="2" FontSize="Medium" />
 
 
-                    <Label Text="Sniff" Grid.Row="2" Grid.Column="0" FontSize="Medium" FontFamily="OpenSans-SemiBold.ttf"/>
-                    <Label Text="Sat, 10/16 at" Grid.Row="2" Grid.Column="1" FontSize="Medium" FontFamily="OpenSans-SemiBold.ttf"/>
-                    <Label Text="1:30pm" Grid.Row="2" Grid.Column="2" FontSize="Medium" FontFamily="OpenSans-SemiBold.ttf"/>
+                    <Label Text="Sniff" Grid.Row="2" Grid.Column="0" FontSize="Medium" />
+                    <Label Text="Sat, 10/16 at" Grid.Row="2" Grid.Column="1" FontSize="Medium" />
+                    <Label Text="1:30pm" Grid.Row="2" Grid.Column="2" FontSize="Medium" />
 
 
 
@@ -70,9 +70,9 @@
             </VerticalStackLayout>
         </Frame>
 
-        <Frame Margin="5" BackgroundColor="White">
+        <Frame Margin="5" BackgroundColor="{StaticResource Gray200}">
             <VerticalStackLayout>
-                <Label Text="Updates:" FontSize="Large" FontAttributes="Bold"  FontFamily="OpenSans-SemiBold.ttf"/>
+                <Label Text="Updates:" FontSize="Large" FontAttributes="Bold"  />
                 <Grid Padding="10" RowSpacing="10">
                     <Grid.RowDefinitions>
                         <RowDefinition Height="*"/>
@@ -89,24 +89,24 @@
                     </Grid.ColumnDefinitions>
                     
                     <Image Source="skill_level_bar_3.png" Grid.Row="0"/>
-                    <Label Text="Cloud's skill Sit increased" Grid.Row="0" Grid.Column="1" FontSize="Medium" FontFamily="OpenSans-SemiBold.ttf" HorizontalTextAlignment="Center"/>
-                    <Label Text="1 day ago" Grid.Row="0" Grid.Column="2" FontSize="Medium" FontFamily="OpenSans-SemiBold.ttf"/>
+                    <Label Text="Cloud's skill Sit increased" Grid.Row="0" Grid.Column="1" FontSize="Medium"  HorizontalTextAlignment="Center"/>
+                    <Label Text="1 day ago" Grid.Row="0" Grid.Column="2" FontSize="Medium" />
 
                     <Image Source="calendar.png" Grid.Row="1"/>
-                    <Label Text="A new training was Added" Grid.Row="1" Grid.Column="1" FontSize="Medium" FontFamily="OpenSans-SemiBold.ttf" HorizontalTextAlignment="Center"/>
-                    <Label Text="2 days ago" Grid.Row="1" Grid.Column="2" FontSize="Medium" FontFamily="OpenSans-SemiBold.ttf"/>
+                    <Label Text="A new training was Added" Grid.Row="1" Grid.Column="1" FontSize="Medium"  HorizontalTextAlignment="Center"/>
+                    <Label Text="2 days ago" Grid.Row="1" Grid.Column="2" FontSize="Medium" />
 
                     <Image Source="cake.png" Grid.Row="2"/>
-                    <Label Text="Happy Birthday Cloud!!!" Grid.Row="2" Grid.Column="1" FontSize="Medium" FontFamily="OpenSans-SemiBold.ttf" HorizontalTextAlignment="Center"/>
-                    <Label Text="4 days ago" Grid.Row="2" Grid.Column="2" FontSize="Medium" FontFamily="OpenSans-SemiBold.ttf"/>
+                    <Label Text="Happy Birthday Cloud!!!" Grid.Row="2" Grid.Column="1" FontSize="Medium"  HorizontalTextAlignment="Center"/>
+                    <Label Text="4 days ago" Grid.Row="2" Grid.Column="2" FontSize="Medium" />
 
                     <Image Source="skill_level_bar_2.png" Grid.Row="3"/>
-                    <Label Text="Cloud's skill Sit increased" Grid.Row="3" Grid.Column="1" FontSize="Medium" FontFamily="OpenSans-SemiBold.ttf" HorizontalTextAlignment="Center"/>
-                    <Label Text="3 weeks ago" Grid.Row="3" Grid.Column="2" FontSize="Medium" FontFamily="OpenSans-SemiBold.ttf"/>
+                    <Label Text="Cloud's skill Sit increased" Grid.Row="3" Grid.Column="1" FontSize="Medium"  HorizontalTextAlignment="Center"/>
+                    <Label Text="3 weeks ago" Grid.Row="3" Grid.Column="2" FontSize="Medium" />
 
                     <Image Source="skill_level_bar_0.png" Grid.Row="4"/>
-                    <Label Text="Play Dead was added for Cloud" Grid.Row="4" Grid.Column="1" FontSize="Medium" FontFamily="OpenSans-SemiBold.ttf" HorizontalTextAlignment="Center"/>
-                    <Label Text="1 month ago" Grid.Row="4" Grid.Column="2" FontSize="Medium" FontFamily="OpenSans-SemiBold.ttf"/>
+                    <Label Text="Play Dead was added for Cloud" Grid.Row="4" Grid.Column="1" FontSize="Medium"  HorizontalTextAlignment="Center"/>
+                    <Label Text="1 month ago" Grid.Row="4" Grid.Column="2" FontSize="Medium" />
                     
 
 
